# Convo

./: .clang-format  .gitignore  00_INIT.sh  01_CONF_DB.sh  CMakeLists.txt  LICENSE  README.md  build.sh
cert/: server.crt  server.csr  server.key  server.pem
client/: CMakeLists.txt
client/include/: client.hpp  client_config.hpp  client_interface.hpp
client/src/: client.cpp  client_interface.cpp  main.cpp
common/: CMakeLists.txt
common/include/: build_info.hpp  client_session.hpp  connection.hpp  logger.hpp  packet.hpp  protocol.hpp  router.hpp
db/: 00_create-db.sql  01_schema.sql  02_seed.sql
server/: CMakeLists.txt
server/include/: build_info.hpp  client_connection.hpp  server.hpp  server_client.hpp  server_config.hpp
server/src/: main.cpp  server.cpp
